// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`additional fragments works 1 1`] = `
Array [
  Object {
    "additionalTypes": Array [
      "export interface SelectionOnOwner {
  login: string;
}
",
      "export interface IFragmentSpreadOnRepository {
  id: string;
  name: string;
  owner: SelectionOnOwner;
}
",
      "export interface SelectionOnAuthor {
  login: string;
}
",
      "export interface IFragmentSpreadOnPullRequest {
  id: string;
  title: string;
  author: SelectionOnAuthor | null;
}
",
      "export interface IFragmentSpreadOnOrganization {
  __typename: 'Organization';
}
",
      "export interface SelectionOnResource {
  __typename:
    | 'Organization'
    | 'Issue'
    | 'User'
    | 'Repository'
    | 'PullRequest'
    | 'PullRequestCommit'
    | 'Milestone'
    | 'MergedEvent'
    | 'CrossReferencedEvent'
    | 'ReviewDismissedEvent'
    | 'Release'
    | 'RepositoryTopic'
    | 'Bot';
}
",
    ],
    "interface": "export interface MyTestQuery {
  resource:
    | SelectionOnResource &
        Partial<IFragmentSpreadOnRepository> &
        Partial<IFragmentSpreadOnPullRequest> &
        Partial<IFragmentIssue> &
        Partial<IFragmentOrganization> &
        Partial<IFragmentSpreadOnOrganization>
    | null;
}
",
    "result": "export interface SelectionOnOwner {
  login: string;
}

export interface IFragmentSpreadOnRepository {
  id: string;
  name: string;
  owner: SelectionOnOwner;
}

export interface SelectionOnAuthor {
  login: string;
}

export interface IFragmentSpreadOnPullRequest {
  id: string;
  title: string;
  author: SelectionOnAuthor | null;
}

export interface IFragmentSpreadOnOrganization {
  __typename: 'Organization';
}

export interface SelectionOnResource {
  __typename:
    | 'Organization'
    | 'Issue'
    | 'User'
    | 'Repository'
    | 'PullRequest'
    | 'PullRequestCommit'
    | 'Milestone'
    | 'MergedEvent'
    | 'CrossReferencedEvent'
    | 'ReviewDismissedEvent'
    | 'Release'
    | 'RepositoryTopic'
    | 'Bot';
}

export interface MyTestQuery {
  resource:
    | SelectionOnResource &
        Partial<IFragmentSpreadOnRepository> &
        Partial<IFragmentSpreadOnPullRequest> &
        Partial<IFragmentIssue> &
        Partial<IFragmentOrganization> &
        Partial<IFragmentSpreadOnOrganization>
    | null;
}
",
    "variables": "",
  },
  Object {
    "additionalTypes": Array [],
    "interface": "export interface IFragmentIssue {
  id: string;
  title: string;
  author: SelectionOnAuthor | null;
}
",
    "result": "export interface IFragmentIssue {
  id: string;
  title: string;
  author: SelectionOnAuthor | null;
}
",
    "variables": "",
  },
  Object {
    "additionalTypes": Array [],
    "interface": "export interface IFragmentOrganization {
  orgName: string | null;
}
",
    "result": "export interface IFragmentOrganization {
  orgName: string | null;
}
",
    "variables": "",
  },
]
`;

exports[`additional fragments works 2 1`] = `
Array [
  Object {
    "additionalTypes": Array [
      "export interface SelectionOnOwner {
  login: string;
}
",
      "export interface IFragmentSpreadOnRepository {
  id: string;
  name: string;
  owner: SelectionOnOwner;
}
",
      "export interface IFragmentSpreadOnOrganization {
  __typename: 'Organization';
}
",
      "export interface SelectionOnResource {
  __typename:
    | 'Organization'
    | 'Issue'
    | 'User'
    | 'Repository'
    | 'PullRequest'
    | 'PullRequestCommit'
    | 'Milestone'
    | 'MergedEvent'
    | 'CrossReferencedEvent'
    | 'ReviewDismissedEvent'
    | 'Release'
    | 'RepositoryTopic'
    | 'Bot';
}
",
    ],
    "interface": "export interface MyTestQuery {
  resource:
    | SelectionOnResource &
        Partial<IFragmentSpreadOnRepository> &
        IFragmentPullRequest &
        Partial<IFragmentIssue> &
        Partial<IFragmentOrganization> &
        Partial<IFragmentSpreadOnOrganization>
    | null;
}
",
    "result": "export interface SelectionOnOwner {
  login: string;
}

export interface IFragmentSpreadOnRepository {
  id: string;
  name: string;
  owner: SelectionOnOwner;
}

export interface IFragmentSpreadOnOrganization {
  __typename: 'Organization';
}

export interface SelectionOnResource {
  __typename:
    | 'Organization'
    | 'Issue'
    | 'User'
    | 'Repository'
    | 'PullRequest'
    | 'PullRequestCommit'
    | 'Milestone'
    | 'MergedEvent'
    | 'CrossReferencedEvent'
    | 'ReviewDismissedEvent'
    | 'Release'
    | 'RepositoryTopic'
    | 'Bot';
}

export interface MyTestQuery {
  resource:
    | SelectionOnResource &
        Partial<IFragmentSpreadOnRepository> &
        IFragmentPullRequest &
        Partial<IFragmentIssue> &
        Partial<IFragmentOrganization> &
        Partial<IFragmentSpreadOnOrganization>
    | null;
}
",
    "variables": "",
  },
  Object {
    "additionalTypes": Array [
      "export interface SelectionOnAuthor {
  login: string;
}
",
    ],
    "interface": "export interface IFragmentIssue {
  id: string;
  title: string;
  author: SelectionOnAuthor | null;
}
",
    "result": "export interface SelectionOnAuthor {
  login: string;
}

export interface IFragmentIssue {
  id: string;
  title: string;
  author: SelectionOnAuthor | null;
}
",
    "variables": "",
  },
  Object {
    "additionalTypes": Array [],
    "interface": "export interface IFragmentOrganization {
  orgName: string | null;
}
",
    "result": "export interface IFragmentOrganization {
  orgName: string | null;
}
",
    "variables": "",
  },
  Object {
    "additionalTypes": Array [
      "export interface IFragmentSpreadOnPullRequest {
  id: string;
  title: string;
  author: SelectionOnAuthor | null;
}
",
    ],
    "interface": "export interface IFragmentPullRequest
  extends Partial<IFragmentSpreadOnPullRequest> {}
",
    "result": "export interface IFragmentSpreadOnPullRequest {
  id: string;
  title: string;
  author: SelectionOnAuthor | null;
}

export interface IFragmentPullRequest
  extends Partial<IFragmentSpreadOnPullRequest> {}
",
    "variables": "",
  },
]
`;
